add checkStyle